<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_bell"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_analytics"
        android:icon="@drawable/ic_chart_pie"
        android:title="@string/title_analytics" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_user"
        android:title="@string/title_profile" />

</menu>