<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".screens.LandingPage">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:background="@drawable/card_background"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:gravity="center"
                android:paddingTop="20dp"
                android:paddingBottom="10dp"
                android:text="@string/app_name"
                android:textColor="@color/colorPrimary"
                android:textSize="30sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Join Today"
                android:textColor="@color/colorHighlight"
                android:textSize="18sp" />


        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher_foreground"
            app:tint="@color/colorPrimary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                style="@style/ButtonMain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:onClick="openRegister"
                android:text="@string/sign_up" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login"
                style="@style/ButtonBorderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="openLogin"
                android:text="@string/login" />
        </LinearLayout>
    </FrameLayout>

</RelativeLayout>