<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context=".screens.Login">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:background="@drawable/card_background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    style="@style/TextTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_bold"
                    android:paddingVertical="15dp"
                    android:paddingStart="5dp"
                    android:text="Welcome Back!"
                    android:textSize="21sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:labelFor="@id/etEmail"
                    android:paddingStart="5dp"
                    android:text="@string/email"
                    android:textColor="@color/colorPrimary" />

                <EditText
                    android:id="@+id/etEmail"
                    style="@style/TextBoxRound"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:inputType="textEmailAddress" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:labelFor="@id/etPwrd"
                    android:paddingStart="5dp"
                    android:text="@string/password"
                    android:textColor="@color/colorPrimary" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/etPwrd"
                        style="@style/TextBoxRound"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/password"
                        android:importantForAutofill="no"
                        android:inputType="textPassword" />

                    <ImageButton
                        android:id="@+id/btnToggle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|end"
                        android:layout_marginEnd="10dp"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:contentDescription="@string/password"
                        android:padding="10dp"
                        android:src="@drawable/ic_eye_off"
                        android:tint="#6468FF" />

                </FrameLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="resetPassword"
                    android:paddingVertical="10dp"
                    android:paddingEnd="5dp"
                    android:text="Forgot password?"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/colorPrimary" />
            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login"
                style="@style/ButtonMain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/login" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Don't have an account?"
                    android:textColor="@color/colorPrimary" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:onClick="openRegister"
                    android:padding="10dp"
                    android:text="@string/sign_up"
                    android:textColor="@color/colorHighlight"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>

</RelativeLayout>