<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:translationY="20dp"
    app:behavior_hideable="true"
    app:behavior_peekHeight="auto"
    app:cardCornerRadius="20dp"
    app:cardElevation="20dp"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <FrameLayout
            android:layout_width="60dp"
            android:layout_height="5dp"
            android:layout_gravity="center"
            android:background="@drawable/card_background"
            android:backgroundTint="@color/bottom_bar_item_color" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="Place Order"
            android:textColor="@color/colorHighlight"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/name"
                    android:textColor="@color/colorPrimary" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/price"
                    android:textColor="@color/colorPrimary" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="Quantity"
                    android:textColor="@color/colorPrimary" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/offers"
                    android:textColor="@color/colorPrimary" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="Deliver to"
                    android:textColor="@color/colorPrimary" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvProduct"
                    style="@style/textViewOrder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/tvPrice"
                    style="@style/textViewOrder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/btnMin"
                        style="@android:style/TextAppearance.Material.Title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:paddingHorizontal="10dp"
                        android:text="-"
                        android:textColor="@color/colorPrimary"
                        android:textSize="25sp"
                        android:textStyle="bold" />


                    <EditText
                        android:id="@+id/etQuantity"
                        android:layout_width="60dp"
                        android:layout_height="40dp"
                        android:layout_marginHorizontal="5dp"
                        android:background="@drawable/edit_text_rounded"
                        android:gravity="center"
                        android:inputType="number"
                        android:maxLines="1"
                        android:text="1" />

                    <TextView
                        android:id="@+id/btnAdd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:paddingHorizontal="10dp"
                        android:text="+"
                        android:textColor="@color/colorPrimary"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <TextView
                    android:id="@+id/tvOffers"
                    style="@style/textViewOrder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="None" />

                <TextView
                    android:id="@+id/tvLocation"
                    style="@style/textViewOrder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnOrder"
            style="@style/ButtonMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:paddingHorizontal="30dp"
            android:text="Order Now"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/btnWishlist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="-20dp"
            android:layout_marginBottom="10dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:paddingHorizontal="30dp"
            android:paddingVertical="20dp"
            android:text="@string/add_wishlist"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp"
            android:textStyle="bold" />
    </LinearLayout>
</androidx.cardview.widget.CardView>


